data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_684.wast
;; 5. **Test Description 5**:    - Implement a `loop` containing a `br_if` that depends on comparison operations (e.g., greater than, less than) applied to dynamic data inputs. The test checks the integrity of evaluating complex conditions during execution.

(assert_invalid
  (module (func $complex-loop-with-br_if (param $x i32) (param $y i32) (result i32)
    (local $z i32)
    (loop (result i32) 
      (get_local $x) 
      (get_local $y) 
      (i32.gt_s)
      (br_if 0)
      (i32.const 42)
    )
  ))
  "type mismatch"
)